# Prog1sakk

./: .clang-format  CMakeLists.txt  babuk_lepese.c  buildrun.sh  run.sh  sakk_jatszma.txt
cmake/sdl2/: FindSDL2.cmake
docs/: .~lock.Untitled 1.odt#  Untitled 1.odt
src/: bool_nelkuli.c  debugmalloc.h  enum.h  fajl.c  fajl.h  grafika.c  grafika.h  lancolt_lista.c  lancolt_lista.h  lepesek.c  lepesek.h  lepesek_babukra.c  lepesek_babukra.h  lepeskisegitofuggvenyek.c  lepeskisegitofuggvenyek.h  lepeskisegitofugvenyek.c  main.c  sakktabla.c  sakktabla.h
